# Nowe_Zadania

./: README.md  pyproject.toml
notebooks/: 1.ipynb
