[tool.poetry]
name = "zadanie 1"
version = "0.1.0"
description = ""
authors = ["Karolina Karszna <kkarszna1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
linearregression = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
